fix base url for Playwright HTML

--- a/playwright-ts-api-test/tests/fixtures/poke-page.html
+++ b/playwright-ts-api-test/tests/fixtures/poke-page.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <base href="http://localhost">
     <title>Pokémon Display</title>
 </head>
 <body>
